News
====

2022-10-09
----------

- Update README with binaries installation  and Visual Studio instructions
- Fix frequency response export in Windows
- Add Visual Studio and MSVC support
- Update RtAudio to 5.2.0
- Increase font size in legend

2022-04-20
----------

- Display base frequency, magnitude and THD in spectrum.
- Add Blackman-Harris window function.
- Increase resolution (> 16 bit) using floating point audio data.
- Catch more errors to avoid crash.
- Compile in DirectSound and WASAPI on Windows.
- Use timer loop instead of sleep for frequency response.

2021-11-04
----------

- Reformat README.md and fix instructions.
- Update to latest RtAudio.
- Switch to WASAPI on Windows.
- Add package creation with CMake.
- Set CMake build type to Release as default.
- Add build instructions for MacOSX.
- Fix Blackman window function.
- Display RtAUdio info in About popup.
- Compile Linux with Alsa and Pulseaudio support.
- Avoid crash when sound card channels are mono or missing.

2021-03-14
----------

- Use pulseaudio on Linux up to 192000 samples/s.
- Catch sound card issues and show message in initialization.
- Optimize screen repaint.
- Improve graph and legend display.
- Add Debian package support in CMake.
- Add compiling instructions for Linux and Windows 10.
- Add white noise to generator.
- Use RMS level in frequency response instead of peak.

2020-09-24
----------

- Improve FFT interpolation.
- Add second channel to frequency response.

2020-07-01
----------

- Migrate to CMake.
- Migrate README to markdown and move change list to NEWS.
- Migrated project from subversion to git.

2019-09-25
----------

- add FFT window functions Hanning and Blackman.
- add spectrum scaling according to sample rate.
- modify spectrum view 10 Hz - 100kHz, 0 - -100 dB.
- fix sound card dialog (available frequencies).

2019-09-22
----------

- update RtAudio to version 5.1.0

2018-??-??
----------

- Updated code to compile with current compilers on Linux.