@@ -31,7 +31,7 @@
 #ifndef AUDMES_H
 #define AUDMES_H
 
-#define AUDMES_VERSION_STRING "2022-10-09"
+#define AUDMES_VERSION_STRING "2023-04-09"
 
 class MainFrame : public wxFrame {
   DECLARE_CLASS(MainFrame)
